# Java-Image-Compare

./: .gitignore  README.md  bilder vergleichen.txt  pom.xml
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/Image-Compare/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Image-Compare/.indexes/e4/e4/7a/92/: history.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Image-Compare/.indexes/e4/e4/7a/d6/: history.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  3.tree  4.tree  7.tree  8.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: TestClass.launch
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 1767825136.index  externalLibsTimeStamps  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/7/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.recommenders/caches/: identified-project-coordinates.json
.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/: _remote.repositories  resolver-status.properties
.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/: _remote.repositories  resolver-status.properties
Image-Compare/: .project
Image-Compare-Final/.metadata/: version.ini
Image-Compare-Final/.metadata/.mylyn/.taskListIndex/: segments_1
Image-Compare-Final/.metadata/.plugins/org.eclipse.core.resources/.projects/Image-Compare/: .location
Image-Compare-Final/.metadata/.plugins/org.eclipse.core.resources/.projects/Image-Compare/.indexes/e4/e4/7a/d6/: history.index
Image-Compare-Final/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
Image-Compare-Final/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Image-Compare-Final/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Image-Compare-Final/.metadata/.plugins/org.eclipse.jdt.core/: 1767825136.index  savedIndexNames.txt
Image-Compare-Final/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
Image-Compare-Final/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
Image-Compare-Final/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Image-Compare-Final/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Image-Compare-Final/src/org/kevsoft/imagecompare/: NearImageCompare.java
Image-Compare/.metadata/: version.ini
Image-Compare/.metadata/.mylyn/.taskListIndex/: segments_1
Image-Compare/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Image-Compare/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Image-Compare/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
Image-Compare/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Image-Compare/src/org/kevsoft/imagecompare/: ImageCompare.java  ImageUtils.java  NearImageCompare.java  PdiffImageCompare.java  SimpleImageCompare Kopie.java  SimpleImageCompare.java
Image-Compare/src/org/kevsoft/network/: NetworkPdiffImageCompare.java
Image-Compare/src/org/kevsoft/test/: TestClass.java  TestClass2.java
Image-Compare/src/org/kevsoft/util/: NativeUtils.java
ImageCompare_Test/: diagramm.csv  links_bazar.txt  links_wohnnet.txt  wassertext.csv
ImageCompare_Test/src/: Test.java
Java-Image-Compare-master/.metadata/.plugins/org.eclipse.core.resources/.root/: 6.tree
Java-Image-Compare-master/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
Java-Image-Compare-master/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Java-Image-Compare-master/.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/: resolver-status.properties
Java-Image-Compare-master/Image-Compare/src/org/kevsoft/imagecompare/: ImageCompare.java  ImageUtils.java
Neuer Ordner/: CMakeCache.txt  Makefile  cmake_install.cmake
Neuer Ordner/Neuer Ordner2/: CMakeCache.txt  Makefile  cmake_install.cmake
VergleichErgebnisse/CSV Dateien/: leichtverschoben.csv  verschoben.csv  wohnung2.0.csv  wohnungverschwommen.csv  wohnungwohnung.csv  zimmer.csv
VergleichErgebnisse/Test/: Test_Unterschiedlich.xlsx  Test_WohnungWohnung.xlsx  Test_WohungWohnungVerschwommen.xlsx  Test_mitWassertext.xlsx  Test_zimmer1_zimmer1LeichtVerschoben.xlsx  Test_zimmer1_zimmer1Verschoben.xlsx
pdiffLIB/: CMakeLists.txt  CompareArgs.cpp  CompareArgs.h  ImageCompare.cpp  ImageCompare.h  Metric.cpp  PerceptualDiff.cpp  PerceptualDiff.sln  PerceptualDiff.vcxproj  RGBAImage.cpp  RGBAImage.h  ThreadedQueue.h  org_kevsoft_imagecompare_PdiffImageCompare.cpp  org_kevsoft_imagecompare_PdiffImageCompare.h  util.cpp  util.h
pdiffLIB-build/: CMakeCache.txt  Makefile  cmake_install.cmake  pdiff.cbp
pdiffLIB/executable/: main.cpp
src/main/java/org/kevsoft/imagecompare/: PdiffImageCompare.java
src/main/resources/libnative/64bit/: libpdiff.dylib
